// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports (default tab) 1`] = `
{
  "lines": 487,
  "sha256": "7051bf947a7561b7a47f255bc74ef0df49401bc7849b502cb1a98cec04db96d2",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging 1`] = `
{
  "lines": 398,
  "sha256": "615033e06d10ec1779287f6c3aaee175448d5bf33654a1ed9b3fdb7a5cde9526",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging with three issued invoices (the aging rows drawn) 1`] = `
{
  "lines": 553,
  "sha256": "4098fc16f58527964fd38ff489106dc8749a4fab07e4599df2f7e8d2e6fde12e",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports default tab with three issued invoices (billed figures on the WIP rows) 1`] = `
{
  "lines": 487,
  "sha256": "1f59e22bc957afdc2c975f9ff5c08180382425c6b301648efa116761e4982160",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports: Profit pressed 1`] = `
{
  "lines": 431,
  "sha256": "9a7f5cb6e44762b30e7e4145efffbbad292088908e2bf78660082824f105ed7b",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report (drill sheet + period picker mounted) 1`] = `
{
  "lines": 716,
  "sha256": "09af49c95419d197e755153159ed14e430a8eea5ddac1061cda73e7959e69fa7",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report: the first project row pressed (the drill sheet drawn) 1`] = `
{
  "lines": 803,
  "sha256": "e0fafa9a2b4865add331e326c5caeed8b0a55258fa314163e6702f02730fff2e",
}
`;
